# OpenAI-Pinecone

./: .gitignore  Cargo.toml  README.md
resources/: embedding_example.json  longer.txt  longer_embedding.json
src/: main.rs
src/libs/: database.rs  database_api.rs  mod.rs  openai_api.rs  pinecone_api.rs  pinecone_data.rs  planetscale.rs  sql_lite.rs
