[package]
name = "openai-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tiktoken-rs = "0.3.3"
typed-builder = "0.14.0"
lazy_static = "1.4"
pdf-extract = "0.6.4"
rayon = "1.5"
thiserror = "1.0"
rusqlite = "0.26"
mysql_async = "0.31.3"
async-trait = "0.1"
